--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -19,4 +19,17 @@
     <color name="main_button_red_normal">#ff4444</color>
     <color name="main_button_red_selected">#c0ff4444</color>
 
+
+    <color name="colorPrimary">#009EB7</color>
+    <color name="colorPrimaryDark">#036A79</color>
+    <color name="colorAccent">#4CAF50</color>
+    <color name="colorPrimaryLight">#B3E5FC</color>
+    <color name="colorPrimaryText">#ffffff</color>
+    <color name="colorSecondaryText">#b1b1b1</color>
+    <color name="colorDivider">#B6B6B6</color>
+    <color name="colorIcons">#B6B6B6</color>
+
+    <color name="window_background">#2F3739</color>
+
+
 </resources>
