--- a/app/src/main/res/layout/activity_add_words.xml
+++ b/app/src/main/res/layout/activity_add_words.xml
@@ -1,62 +1,113 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/back"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sachinshinde.wordlearner.AddWords">
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    android:background="@color/window_background">
 
-    <TextView
-        android:id="@+id/tvCount"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="5dp"
-        android:text="Total Count: 1000 words"
-        android:textColor="#ff3882ff"
-        android:textSize="15sp"/>
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-    <View
-        android:id="@+id/view"
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+        <!--</android.support.design.widget.CollapsingToolbarLayout>-->
+
+    </android.support.design.widget.AppBarLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/tvCount"
-        android:background="#ff3882ff"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/appbar"
+        android:layout_above="@+id/adView"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
-    <LinearLayout
-        android:layout_width="0px" android:layout_height="0px"
-        android:focusable="true" android:focusableInTouchMode="true"/>
+        <TextView
+            android:id="@+id/tvCount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:text="Total Count: 1000 words"
+            android:textColor="@color/colorPrimary"
+            android:textSize="15sp" />
 
-    <EditText
-        android:id="@+id/etAddWords"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/view"
-        android:layout_marginTop="5dp"
-        android:nextFocusLeft="@id/etAddWords"
-        android:nextFocusUp="@id/etAddWords"/>
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/tvCount"
+            android:background="@color/colorPrimary"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp" />
 
-    <Button
-        android:id="@+id/bAddWords"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/etAddWords"
-        android:padding="5dp"
-        android:text="Add"/>
+        <LinearLayout
+            android:layout_width="0px"
+            android:layout_height="0px"
+            android:focusable="true"
+            android:focusableInTouchMode="true" />
 
-    <ListView
-        android:id="@+id/lvWords"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/bAddWords"
-        android:layout_margin="5dp"
-        android:fastScrollAlwaysVisible="true"
-        android:fastScrollEnabled="true">
+        <EditText
+            android:id="@+id/etAddWords"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/view"
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/colorPrimaryText"
+            android:textColor="@color/colorPrimaryText"
+            android:hint="Search..."
+            android:nextFocusLeft="@id/etAddWords"
+            android:nextFocusUp="@id/etAddWords" />
+
+        <!--<Button-->
+        <!--android:id="@+id/bAddWords"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/etAddWords"-->
+        <!--android:padding="5dp"-->
+        <!--android:text="Add" />-->
+
+        <ListView
+            android:id="@+id/lvWords"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/etAddWords"
+            android:layout_margin="5dp"
+            android:fastScrollAlwaysVisible="true"
+            android:fastScrollEnabled="true">
 
         </ListView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/bAddWords"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_plus" />
+    </RelativeLayout>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-0456749078397566/3795079686">
+    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
