--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,5 +4,6 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:paddingBottom="10dp"
+    android:textColor="@color/colorSecondaryText"
     android:paddingLeft="15dp"
     android:paddingTop="10dp" />
