--- a/app/src/main/res/menu/test_words.xml
+++ b/app/src/main/res/menu/test_words.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.sachinshinde.wordlearner.TestWords" >
+    tools:context="com.sachinshinde.wordlearner.TestWordsActivity" >
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
