--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="Theme.AddActivity" parent="Theme.Design">
+        <item name="android:actionOverflowButtonStyle">@style/OverFlow</item>
+    </style>
     <style name="Theme.Design" parent="Base.Theme.Design">
     </style>
 
@@ -11,4 +14,9 @@
         <item name="android:windowBackground">@color/window_background</item>
     </style>
 
+
+
+    <style name="OverFlow" parent="@android:style/Widget.Holo.ActionButton.Overflow">
+        <item name="android:src">@drawable/ic_sort</item>
+    </style>
 </resources>
