--- a/app/src/main/res/layout/activity_test_words.xml
+++ b/app/src/main/res/layout/activity_test_words.xml
@@ -1,106 +1,111 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/window_background"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sachinshinde.wordlearner.TestWordsActivity">
 
-
-    <ImageButton
-        android:id="@+id/bSpeak"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/main_button_blue"
-        android:padding="8dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_volume_high" />
-
-    <ProgressBar
-        android:id="@+id/pbVoice"
-        android:layout_width="40dp"
-        android:visibility="gone"
-        android:layout_height="40dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:indeterminateOnly="true"/>
-
-    <ImageButton
-        android:id="@+id/bEdit"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginRight="8dp"
-        android:layout_toLeftOf="@+id/bSpeak"
-        android:background="@drawable/main_button_yellow"
-        android:padding="8dp"
-        android:scaleType="fitCenter"
-        android:src="@android:drawable/ic_menu_edit" />
-
-    <ImageButton
-        android:id="@+id/bLinkify"
-        android:layout_width="40dp"
-        android:visibility="gone"
-        android:layout_height="40dp"
-        android:layout_marginRight="8dp"
-        android:layout_toLeftOf="@+id/bEdit"
-        android:background="@drawable/main_button_green"
-        android:padding="8dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/linkify" />
-
-    <TextView
-        android:id="@+id/tvCount"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/bSpeak"
-        android:paddingLeft="5dp"
-        android:text="Total Count: 1000 words"
-        android:textColor="@color/colorPrimary"
-        android:textSize="15sp" />
+        android:layout_above="@+id/adView"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/tvCount"
-        android:background="@color/colorPrimary"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp" />
+        <ImageButton
+            android:id="@+id/bSpeak"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/main_button_blue"
+            android:padding="8dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_volume_high" />
+
+        <ProgressBar
+            android:id="@+id/pbVoice"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:indeterminateOnly="true"
+            android:visibility="gone" />
+
+        <ImageButton
+            android:id="@+id/bEdit"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="8dp"
+            android:layout_toLeftOf="@+id/bSpeak"
+            android:background="@drawable/main_button_yellow"
+            android:padding="8dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_pencil" />
+
+        <ImageButton
+            android:id="@+id/bLinkify"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="8dp"
+            android:layout_toLeftOf="@+id/bEdit"
+            android:background="@drawable/main_button_green"
+            android:padding="8dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/linkify"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tvCount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/bSpeak"
+            android:paddingLeft="5dp"
+            android:text="Total Count: 1000 words"
+            android:textColor="@color/colorPrimary"
+            android:textSize="15sp" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/tvCount"
+            android:background="@color/colorPrimary"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp" />
 
 
-    <TextView
-        android:id="@+id/tvWord"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvCount"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:text="@string/hello_world"
-        android:textSize="40sp" />
+        <TextView
+            android:id="@+id/tvWord"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvCount"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:text="@string/hello_world"
+            android:textSize="40sp" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/bMeaning"
-        android:layout_below="@+id/tvWord"
-        android:layout_centerHorizontal="true"
-        >
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/bMeaning"
+            android:layout_below="@+id/tvWord"
+            android:id="@+id/flWordsContainer"
+            android:layout_centerHorizontal="true">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+            <!--<FrameLayout-->
+                <!--android:id="@+id/flWordsContainer"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content">-->
 
-        android:id="@+id/flWordsContainer">
+            <!--</FrameLayout>-->
+        </ScrollView>
 
-    </FrameLayout>
-    </ScrollView>
-
-    <!--<ScrollView-->
+        <!--<ScrollView-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
         <!--android:layout_above="@+id/bMeaning"-->
@@ -109,50 +114,61 @@
         <!--android:fadeScrollbars="false">-->
 
         <!--<TextView-->
-            <!--android:id="@+id/tvMeaning"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:paddingTop="5dp"-->
-            <!--android:text="@string/hello_world"-->
-            <!--android:textColor="#fff"-->
-            <!--android:textSize="18sp" />-->
+        <!--android:id="@+id/tvMeaning"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:paddingTop="5dp"-->
+        <!--android:text="@string/hello_world"-->
+        <!--android:textColor="#fff"-->
+        <!--android:textSize="18sp" />-->
 
-    <!--</ScrollView>-->
+        <!--</ScrollView>-->
 
 
-    <FrameLayout
-        android:id="@+id/pbMeaning"
+        <FrameLayout
+            android:id="@+id/pbMeaning"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true">
+
+
+        </FrameLayout>
+
+        <Button
+            android:id="@+id/bMeaning"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/bYes"
+            android:layout_centerHorizontal="true"
+            android:text="Show Meaning" />
+
+
+        <Button
+            android:id="@+id/bYes"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/bNo"
+            android:layout_centerHorizontal="true"
+            android:text="I know" />
+
+        <Button
+            android:id="@+id/bNo"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="0dp"
+            android:text="Will revise" />
+
+    </RelativeLayout>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
-
-
-    </FrameLayout>
-
-    <Button
-        android:id="@+id/bMeaning"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/bYes"
-        android:layout_centerHorizontal="true"
-        android:text="Show Meaning" />
-
-
-    <Button
-        android:id="@+id/bYes"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/bNo"
-        android:layout_centerHorizontal="true"
-        android:text="I know" />
-
-    <Button
-        android:id="@+id/bNo"
-        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:text="Will revise" />
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-0456749078397566/5271812884"></com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
