--- a/app/src/main/res/layout/button_bar.xml
+++ b/app/src/main/res/layout/button_bar.xml
@@ -31,7 +31,7 @@
         android:weightSum="1">
 
         <ImageButton
-            android:id="@+id/bEdit"
+            android:id="@+id/bCancelorDelete"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="10dp"
@@ -52,14 +52,14 @@
 
 
         <ImageButton
-            android:id="@+id/bLinkify"
+            android:id="@+id/bEdit"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="10dp"
             android:background="@drawable/main_button_yellow"
             android:padding="8dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/linkify" />
+            android:src="@drawable/ic_pencil" />
 
         <ImageButton
             android:id="@+id/bDone"
