--- a/app/src/main/res/layout/meaning_item.xml
+++ b/app/src/main/res/layout/meaning_item.xml
@@ -55,6 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvSynonyms"
+                android:textColorLink="@color/colorPrimary"
                 android:text="pretentious, high-flown, ostentatious, pompous, grandiose, over-elaborate, overblown, overripe, overworked, overdone"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="15sp" />
@@ -80,6 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvAntonyms"
+                android:textColorLink="@color/colorPrimary"
                 android:text="natural, unpretentious, genuine"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="15sp" />
