--- a/app/src/main/res/menu/toolbar_actions.xml
+++ b/app/src/main/res/menu/toolbar_actions.xml
@@ -5,10 +5,10 @@
         <!--android:id="@+id/action_settings"-->
         <!--android:title="@string/settings"-->
         <!--app:showAsAction="never" />-->
-    <item
-        android:id="@+id/action_gopro"
-        android:title="@string/gopro"
-        app:showAsAction="never" />
+    <!--<item-->
+        <!--android:id="@+id/action_gopro"-->
+        <!--android:title="@string/gopro"-->
+        <!--app:showAsAction="never" />-->
     <item
         android:id="@+id/action_rate"
         android:title="@string/rate"
