--- a/app/src/main/res/layout/activity_test_words.xml
+++ b/app/src/main/res/layout/activity_test_words.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/window_background"
-    tools:context="com.sachinshinde.wordlearner.TestWordsActivity">
+    tools:context="com.sachinshinde.wordlearner.activities.TestWordsActivity">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
