--- a/app/src/main/res/layout/import_progress_dialog.xml
+++ b/app/src/main/res/layout/import_progress_dialog.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:background="@color/window_background"
     android:orientation="vertical">
 
     <LinearLayout
