--- a/app/src/main/res/layout/export_dialog.xml
+++ b/app/src/main/res/layout/export_dialog.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     android:background="@color/window_background"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_horizontal_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_horizontal_margin">
+    android:paddingRight="@dimen/activity_horizontal_margin">
 
     <TextView
         android:layout_width="match_parent"
@@ -24,92 +24,105 @@
         android:layout_marginBottom="10dp"
         android:background="@color/colorDivider" />
 
-    <CheckBox
-        android:id="@+id/cbIndex"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:checked="false"
-        android:text="Index" />
+        android:layout_height="wrap_content">
 
-    <CheckBox
-        android:id="@+id/cbMeaning"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:checked="false"
-        android:text="Meaning" />
 
-    <CheckBox
-        android:id="@+id/cbSentence"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:checked="false"
-        android:text="Example Sentence" />
-
-    <CheckBox
-        android:id="@+id/cbSynonyms"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:checked="false"
-        android:text="Synonyms" />
-
-    <CheckBox
-        android:id="@+id/cbAntonyms"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:checked="false"
-        android:text="Antonyms" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.2dp"
-        android:layout_margin="10dp"
-        android:background="@color/colorDivider" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="DIRECTORY:"
-        android:textSize="15sp" />
-
-    <LinearLayout
-        android:id="@+id/containerDirectory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/item_background_transparent"
-        android:clickable="true"
-        android:orientation="horizontal"
-        android:padding="5dp">
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_folder_upload" />
-
-        <TextView
-            android:id="@+id/tvExportDirectory"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:text="/mnt/sachin/abc/hello"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="15sp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <CheckBox
+                android:id="@+id/cbIndex"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:checked="false"
+                android:text="Index" />
 
-    <Button
-        android:id="@+id/bExport"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="EXPORT" />
+            <CheckBox
+                android:id="@+id/cbMeaning"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:checked="false"
+                android:text="Meaning" />
+
+            <CheckBox
+                android:id="@+id/cbSentence"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:checked="false"
+                android:text="Example Sentence" />
+
+            <CheckBox
+                android:id="@+id/cbSynonyms"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:checked="false"
+                android:text="Synonyms" />
+
+            <CheckBox
+                android:id="@+id/cbAntonyms"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:checked="false"
+                android:text="Antonyms" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.2dp"
+                android:layout_margin="10dp"
+                android:background="@color/colorDivider" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="DIRECTORY:"
+                android:textSize="15sp" />
+
+            <LinearLayout
+                android:id="@+id/containerDirectory"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/item_background_transparent"
+                android:clickable="true"
+                android:orientation="horizontal"
+                android:padding="5dp">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_folder_upload" />
+
+                <TextView
+                    android:id="@+id/tvExportDirectory"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:text="/mnt/sachin/abc/hello"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/bExport"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="EXPORT" />
+        </LinearLayout>
+    </ScrollView>
+
 
 </LinearLayout>
