--- a/app/src/main/res/menu/test_words.xml
+++ b/app/src/main/res/menu/test_words.xml
@@ -1,8 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.sachinshinde.wordlearner.activities.TestWordsActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.sachinshinde.wordlearner.activities.TestWordsActivity">
+    <item android:id="@+id/action_undo"
+        android:title="@string/undo"
+        android:icon="@drawable/ic_undo_variant"
+        app:showAsAction="always" />
+    <item android:id="@+id/action_edit"
+        android:title="@string/edit_word"
+        android:icon="@drawable/ic_pencil"
+        app:showAsAction="always" />
+    <item android:id="@+id/action_speak"
+        android:title="@string/speak"
+        android:icon="@drawable/ic_volume_high"
+        app:showAsAction="always" />
 </menu>
