--- a/app/src/main/res/layout/activity_add_words.xml
+++ b/app/src/main/res/layout/activity_add_words.xml
@@ -27,6 +27,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/wordListContainer"
         android:layout_below="@id/appbar"
         android:layout_above="@+id/adView"
         android:paddingBottom="@dimen/activity_vertical_margin"
@@ -108,18 +109,34 @@
 
         </ListView>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/bAddWords"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="16dp"
-            android:src="@drawable/ic_plus" />
+
     </RelativeLayout>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/bAddWords"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:layout_alignBottom="@+id/wordListContainer"
+        android:src="@drawable/ic_plus" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableTop="@drawable/error_cloud"
+        android:id="@+id/tvNoWords"
+        android:drawablePadding="10dp"
+        android:textColor="@color/colorPrimaryText"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:visibility="gone"
+        android:textSize="20sp"
+        android:text="Sorry Captain, No words here."/>
+
     <com.google.android.gms.ads.AdView
+        android:visibility="gone"
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
