--- a/app/src/main/res/layout/activity_session_details.xml
+++ b/app/src/main/res/layout/activity_session_details.xml
@@ -47,6 +47,17 @@
         android:layout_margin="16dp"
         android:src="@drawable/ic_plus" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabStartSession"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        app:backgroundTint="@color/main_button_red_normal"
+        android:layout_above="@+id/adView"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_play" />
+
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="wrap_content"
