--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,153 +6,223 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    <RelativeLayout
+        android:id="@+id/rlsplash"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:visibility="gone"
+        android:background="@color/window_background">
 
+        <RelativeLayout
+            android:id="@+id/rlimages"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            <ImageView
+                android:id="@+id/ivsplash"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/word_learner" />
 
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center"
-            android:src="@drawable/word_learner" />
+            <ImageView
+                android:id="@+id/ivsplashedit"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="20dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rltexts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/view1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:id="@+id/tvBattery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginBottom="5dp"
+                android:text="Word"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#33b5e5"
+                android:textSize="40sp"
+                android:typeface="normal" />
+
+            <TextView
+                android:id="@+id/tvCaster"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvBattery"
+                android:layout_toRightOf="@+id/tvBattery"
+                android:text="Learner"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#33b5e5"
+                android:textSize="40sp"
+                android:typeface="normal" />
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/view1"
+            android:layout_width="fill_parent"
+            android:layout_height="3.5dp"
+            android:layout_above="@+id/rlimages"
+            android:layout_margin="7dp"
+            android:background="#595959" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/tvinfo"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Word Learner"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="35sp" />
-        <!--</android.support.design.widget.CollapsingToolbarLayout>-->
+            android:layout_below="@+id/rlimages"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:text="@string/initialising_for_first_use"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#ffefefef"
+            android:textSize="20sp"
+            android:typeface="normal" />
+    </RelativeLayout>
 
-    </android.support.design.widget.AppBarLayout>
-
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/adView"
-        android:layout_below="@+id/appbar"
-        android:layout_marginTop="20dp">
+        android:id="@+id/containerMain"
+        android:layout_height="match_parent">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:fitsSystemWindows="true"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                android:src="@drawable/word_learner" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Word Learner"
+                android:textColor="@color/colorPrimaryText"
+                android:textSize="35sp" />
+            <!--</android.support.design.widget.CollapsingToolbarLayout>-->
+
+        </android.support.design.widget.AppBarLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/adView"
+            android:layout_below="@+id/appbar"
+            android:layout_marginTop="20dp">
+
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/back"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/buttonAddWords"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginBottom="2.5dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="2.5dp"
+                    android:background="@drawable/item_background"
+                    android:text="WORD LIST"
+                    android:textColor="@color/colorTernaryText"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/buttonTest"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginBottom="2.5dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="2.5dp"
+                    android:background="@drawable/item_background"
+                    android:text="SESSIONS"
+                    android:textColor="@color/colorTernaryText"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/buttonImport"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginBottom="2.5dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="2.5dp"
+                    android:background="@drawable/item_background"
+                    android:text="IMPORT WORDS"
+                    android:textColor="@color/colorTernaryText"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/buttonExport"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginBottom="2.5dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="2.5dp"
+                    android:background="@drawable/item_background"
+                    android:text="EXPORT WORDS"
+                    android:textColor="@color/colorTernaryText"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/buttonRemoveAds"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginBottom="2.5dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="2.5dp"
+                    android:background="@drawable/item_background"
+                    android:text="REMOVE ADS BY DONATION"
+                    android:textColor="@color/colorTernaryText"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+        </ScrollView>
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/back"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/buttonAddWords"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginBottom="2.5dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginTop="2.5dp"
-                android:background="@drawable/item_background"
-                android:text="WORD LIST"
-                android:textColor="@color/colorTernaryText"
-                android:textSize="12sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/buttonTest"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginBottom="2.5dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginTop="2.5dp"
-                android:background="@drawable/item_background"
-                android:text="SESSIONS"
-                android:textColor="@color/colorTernaryText"
-                android:textSize="12sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/buttonImport"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginBottom="2.5dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginTop="2.5dp"
-                android:background="@drawable/item_background"
-                android:text="IMPORT WORDS"
-                android:textColor="@color/colorTernaryText"
-                android:textSize="12sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/buttonExport"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginBottom="2.5dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginTop="2.5dp"
-                android:background="@drawable/item_background"
-                android:text="EXPORT WORDS"
-                android:textColor="@color/colorTernaryText"
-                android:textSize="12sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/buttonRemoveAds"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginBottom="2.5dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginTop="2.5dp"
-                android:background="@drawable/item_background"
-                android:text="REMOVE ADS BY DONATION"
-                android:textColor="@color/colorTernaryText"
-                android:textSize="12sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-    </ScrollView>
-
-    <!--<android.support.design.widget.FloatingActionButton-->
-    <!--android:id="@+id/buttonImport"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentLeft="true"-->
-    <!--android:layout_alignParentStart="true"-->
-    <!--android:layout_margin="16dp"-->
-    <!--app:backgroundTint="@color/main_button_yellow_normal"-->
-    <!--android:layout_above="@+id/adView"-->
-    <!--android:src="@drawable/ic_package_up" />-->
-
-    <!--<android.support.design.widget.FloatingActionButton-->
-    <!--android:id="@+id/buttonExport"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_above="@+id/adView"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentRight="true"-->
-    <!--android:layout_alignParentEnd="true"-->
-    <!--app:backgroundTint="@color/main_button_blue_normal"-->
-    <!--android:layout_margin="16dp"-->
-    <!--android:src="@drawable/ic_package_down" />-->
-
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-0456749078397566/9841613280"></com.google.android.gms.ads.AdView>
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-0456749078397566/9841613280"></com.google.android.gms.ads.AdView>
+    </RelativeLayout>
 </RelativeLayout>
