--- a/app/src/main/res/layout/activity_session_details.xml
+++ b/app/src/main/res/layout/activity_session_details.xml
@@ -37,24 +37,25 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_above="@+id/adView"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_plus" />
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_above="@+id/adView"-->
+        <!--android:layout_margin="16dp"-->
+        <!--android:src="@drawable/ic_plus" />-->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabStartSession"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        app:backgroundTint="@color/main_button_red_normal"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_above="@+id/adView"
+        app:backgroundTint="@color/main_button_blue_normal"
+        android:layout_alignBottom="@+id/viewpager"
         android:layout_margin="16dp"
         android:src="@drawable/ic_play" />
 
