--- a/app/src/main/res/menu/menu_session_details.xml
+++ b/app/src/main/res/menu/menu_session_details.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.sachinshinde.wordlearner.activities.SessionDetailsActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/action_add_words"
+        android:title="Add words"
+        android:icon="@drawable/ic_plus"
+        app:showAsAction="always" />
 </menu>
